# otus_cpp_basic

./: CMakeLists.txt  LICENSE  README.md  main.cpp  result
components/args/: args.cpp  args.hpp
components/game/: game.cpp  game.hpp
components/game_control/: game_control.cpp  game_control.hpp
components/help/: help.hpp
components/move_me_out/: move_me_out.cpp  move_me_out.h
components/players_name/: players_name.cpp  players_name.hpp
components/result/: result.cpp  result.hpp
main/: main.cpp  main.hpp
